fix main overflowing into sidebar

--- a/assets/css/eqtr_main.css
+++ b/assets/css/eqtr_main.css
@@ -45,8 +45,9 @@ h1, h2, h3 {
 
 nav {
 	width: 100%;
+	display: table;
+    table-layout: fixed;
 }
-
 
 nav ul {
 	width: 100%;
@@ -57,8 +58,8 @@ nav ul {
 
 nav ul li {
 	float: left;
-	max-width: 20%;
-	min-width: 90px;
+	margin: 0.5em;
+	display: table-cell;
 }
 
 nav ul li a {
@@ -107,8 +108,9 @@ nav ul li:last-child a {
 	background: #b8cc33;
 }
 
-#feautre img {
+#feature img {
 	border-radius: 7px 7px 0 0;
+	width: 100%;
 }
 
 #feature h2 {
@@ -119,6 +121,15 @@ nav ul li:last-child a {
 	float: right;
 	width: 33%;
 }
+
+#content {
+	width: auto !important;
+}
+
+main {
+	width: 66% ;
+}
+/*width: auto !important; */
 aside {
 	padding-top: 2em;
 }
